fix: align horizontal list

--- a/packages/components/src/styles/list/list.css
+++ b/packages/components/src/styles/list/list.css
@@ -92,7 +92,7 @@
       @apply flex;
 
       & li {
-        @apply flex;
+        @apply flex pt-0;
       }
 
       & li:not(:last-child) {
